added changes from laptop (login)

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,5 +4,9 @@
 // Bulma
 @import './node_modules/bulma/bulma.sass';
 
+// Font Awesome
+@import './node_modules/font-awesome/scss/font-awesome.scss';
+
 // Variables
 @import "variables";
+
